2013-06-01 Sat  Jari Aalto  <jari.aalto@cante.net>

	* README.rst (REQUIREMENTS): List run time requirements.

	* bin/restricted-shell-create.5.pod:
	(OPTIONS): Add -a, --attributes to activate chattr(1).
	(BUGS): Mention getopt(1)

	* makefile.sh (Tmpfile, Atexit): New.
	(Main): Add getopt(1) support. Use if available. Check syntax
	of user supplied $RSHELL. Correct error "--chown is not in
	format user:group". Add new option --attribute.
	(CreateUser): Option --force now allows changing user's shell.
	Add many more RSHELL cases to check. Add sanity checks for
	user supplied commands, like no spaces, no relative paths etc.
	(Chattr): Activate only on $OPT_CHATTR.
	(TMPBASE): master

2013-05-31 Fri  Jari Aalto  <jari.aalto@cante.net>

	* makefile.sh (Which): New.

2013-05-30 Thu  Jari Aalto  <jari.aalto@cante.net>

	* README.rst (USAGE): Broaden example.

	* makefile.sh (CreateUser): improve chsh message.
	(Help): update --force option. The list of allowed commands must
	be on standard PATH.

2013-05-29 Wed  Jari Aalto  <jari.aalto@cante.net>

	* makefile.sh (Help): Fix typo.
	(Main): Die on unknown option.
	(Help): Add that combining short options are not supported.

	* bin/restricted-shell-create.5.pod: Fix typo.
	(BUGS): Add that combining short options are not supported.

	* Makefile (help): Suppress displaying command.

2012-06-18 Mon  Jari Aalto  <jari.aalto@cante.net>

	* makefile.sh (Main): Correct typo from $chwon to $chown.

2012-01-31  Jari Aalto  <jari.aalto@cante.net>

	* bin/restricted-shell-create.5.pod: (OPTIONS): Add option
	--password. Move option --help to the end (GNU convention).
	(BUGS): Mention that rbash behavior does not work correctly
	after su(1). This is a known bug in rbash(1).

	* bin/restricted-shell-create.sh: Fix typo in comment.

	* makefile.sh: (Main): Add option
	--password. Chwon HOME directory with correct user:group.
	(GetUserGroup): New.
	(CreateUser): Call useradd(1) with --skel, --password
	--create-home as needed.