@@ -263,7 +263,7 @@ user directory after this program.</p>
 </p>
 <hr />
 <h1><a name="availability">AVAILABILITY</a></h1>
-<p><a href="http://freecode.com/projects/restricted-shell-rbash">http://freecode.com/projects/restricted-shell-rbash</a></p>
+<p><a href="https://github.com/jaalto/project--linux-tmpfs-ramdisk">https://github.com/jaalto/project--linux-tmpfs-ramdisk</a></p>
 <p>
 </p>
 <hr />
