@@ -1,3 +1,12 @@
+2019-05-05 Sun  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/restricted-shell-create.5.pod: (AVAILABILITY):
+	Update to Github.
+
+	* doc/manual/index.txt (AVAILABILITY): Update to Github.
+
+	* makefile.sh (HOMEPAGE): Update to Github.
+
 2013-06-01 Sat  Jari Aalto  <jari.aalto@cante.net>
 
 	* README.rst (REQUIREMENTS): List run time requirements.
